--- a/src/features/home/Tool.scss
+++ b/src/features/home/Tool.scss
@@ -134,7 +134,7 @@
 
 @media (max-width: 420px) {
   .home-tool {
-    padding: 3.125rem 0 3.5rem 0;
+    padding: 3rem 0 3.25rem 0;
     .tool {
       .text {
         max-width: 200px;
